--- a/plugin.xml
+++ b/plugin.xml
@@ -69,7 +69,7 @@
             </activity>
 		</config-file>
 		
-		<config-file target="AndroidManifest.xml" parent="/*">
+		<config-file target="AndroidManifest.xml" parent="/manifest">
 		    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 		</config-file>
 
