--- a/plugin.xml
+++ b/plugin.xml
@@ -70,6 +70,7 @@
 		</config-file>
 		
 		<config-file target="AndroidManifest.xml" parent="/manifest">
+			<uses-permission android:name="android.permission.CAMERA"/>
 		    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 		</config-file>
 
